# quick-desktop

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
src/example/: CMakeLists.txt  main.cpp  main.qml
src/uibase/: CMakeLists.txt  qmldir  uibase.cpp  uibase.h  uibase.qrc
src/uibase/component/: Shadow.qml
src/uibase/framelesswindow/: FramelessWindow.qml  framelesswindowhelper.cpp  framelesswindowhelper.h  windownativeeventfilterwin.cpp  windownativeeventfilterwin.h
src/uibase/framelesswindow/mac/: framelesswindowhelper.mm
src/uibase/framelesswindow/qml/: DragMoveWindowArea.qml  FramelessWindow.qml  SystemButton.qml  SystemButtonGroup.qml
src/uibase/framelesswindow/qml/+macos/: FramelessWindow.qml
src/uibase/framelesswindow/qml/+windows/: FramelessWindow.qml
src/uibase/framelesswindow/win/: framelesswindowhelper.cpp  windownativeeventfilter.cpp  windownativeeventfilter.h  windownativeeventhandler.cpp  windownativeeventhandler.h
